# aws-sso-connect

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  config_tests.rs  main.rs  token.rs
